ghc-4335c07/testsuite/tests/typecheck/should_compile/T7827.hs
{-# LANGUAGE ScopedTypeVariables #-}
module T7827 where

bug :: a -> ()
bug ((_ :: a) :: a) = ()
