ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail027.hs
-- !!! tests for CycleErr in classes
module TcFail where

class (B a) => A a where
 op1 :: a -> a

class (A a) => B a where
 op2 :: a -> a -> a
